--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+#/demo_savedir/*
+
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
