--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/demo_savedir/*
+#/demo_savedir/*.mtl
+!.gitignore
 
 [Ll]ibrary/
 [Tt]emp/
